[package]
name = "chocomint"
version = "0.1.0-alpha.1"
description = "Rust API wrapper for the Roblox API"
authors = ["Kyando <amehikoji@gmail.com>"]
license = "MIT"
license-file = "license.md"
repository = "https://github.com/Kyando2/chocomint.git"
homepage = "https://github.com/Kyando2/chocomint"
keywords = ["roblox", "api"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
